--- a/app/src/main/res/layout/fragment_student_assignment.xml
+++ b/app/src/main/res/layout/fragment_student_assignment.xml
@@ -47,9 +47,10 @@
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
                 android:layout_marginLeft="20dp"
-                android:fontFamily="@font/poppins_bold"
-                android:text="Your Assignments..."
+                android:fontFamily="@font/googlesans_medium"
+                android:text="Your Assignments"
                 android:textColor="@color/darkMainColor"
                 android:textSize="24sp" />
 
