--- a/app/src/main/res/layout/fragment_teacher_assignment.xml
+++ b/app/src/main/res/layout/fragment_teacher_assignment.xml
@@ -49,7 +49,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
-                android:fontFamily="@font/poppins_bold"
+                android:fontFamily="@font/googlesans_medium"
+                android:layout_marginBottom="15dp"
                 android:text="Assignments..."
                 android:textColor="@color/darkMainColor"
                 android:textSize="24sp" />
