--- a/app/src/main/res/layout/item_notes.xml
+++ b/app/src/main/res/layout/item_notes.xml
@@ -1,23 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="10dp"
-        android:elevation="30dp"
         android:layout_margin="10dp"
-        >
+        android:elevation="30dp"
+        app:cardCornerRadius="10dp">
 
         <View
+            android:id="@+id/vPriority"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_gravity="right"
             android:layout_margin="10dp"
-            android:id="@+id/vPriority"
             android:background="@drawable/red_dot">
 
 
@@ -27,51 +26,51 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:orientation="vertical"
-            >
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="title fkds"
-            android:id="@+id/tvTitle"
-            android:fontFamily="@font/poppins_bold"
-            android:maxLines="1"
-            android:textSize="16sp"
-
-            >
-
-
-        </TextView>
+            android:orientation="vertical">
 
             <TextView
+                android:id="@+id/tvTitle"
                 android:layout_width="match_parent"
-                android:id="@+id/tvSubtitle"
                 android:layout_height="wrap_content"
-                android:text="subtitle afijf fdsjkhf uf akfj afdkj safdkjlfd asjkdfsjhk sdkfj dskjf ds"
-                android:fontFamily="@font/poppins_regular"
-                android:textSize="14sp"
-                android:layout_marginTop="5dp"
+                android:fontFamily="@font/googlesans_bold"
+                android:maxLines="1"
+                android:text="title fkds"
+                android:textColor="@color/darkMainColor"
+                android:textSize="16sp"
                 >
 
 
             </TextView>
 
             <TextView
+                android:id="@+id/tvSubtitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/tvDate"
-                android:text="27/December/2021"
-                android:fontFamily="@font/poppins_bold"
+                android:layout_marginTop="5dp"
+                android:maxLines="2"
+                android:textColor="@color/greyText"
+                android:fontFamily="@font/googlesans_regular"
+                android:text="subtitle afijf fdsjkhf uf akfj afdkj safdkjlfd asjkdfsjhk sdkfj dskjf ds"
+                android:textSize="14sp">
 
-                android:textSize="12sp"
+
+            </TextView>
+
+            <TextView
+                android:id="@+id/tvDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                >
+                android:fontFamily="@font/googlesans_regular"
+
+                android:text="27/December/2021"
+                android:textSize="12sp">
 
 
             </TextView>
 
         </LinearLayout>
-        
+
     </androidx.cardview.widget.CardView>
 
 </LinearLayout>
