--- a/app/src/main/res/layout/myclass_item.xml
+++ b/app/src/main/res/layout/myclass_item.xml
@@ -13,10 +13,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:fontFamily="@font/roboto"
+        android:fontFamily="@font/googlesans_medium"
         android:text="course"
         android:textColor="@color/greyText"
-        android:textSize="10sp"
+        android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:fontFamily="@font/roboto_medium"
+        android:fontFamily="@font/googlesans_medium"
         android:text="subject"
         android:textColor="@color/darkMainColor"
         android:textSize="18sp"
@@ -37,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:fontFamily="@font/roboto"
+        android:fontFamily="@font/googlesans_light"
         app:layout_constraintHorizontal_bias="0"
         android:textColor="@color/darkGreyText"
         android:maxLines="1"
