--- a/app/src/main/res/layout/fragment_assignment_detail.xml
+++ b/app/src/main/res/layout/fragment_assignment_detail.xml
@@ -7,6 +7,15 @@
     tools:context=".screens.AssignmentDetailFragment">
 
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    <androidx.cardview.widget.CardView
+        android:layout_margin="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="20dp"
+        >
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -15,6 +24,7 @@
 
 
         >
+
 
         <TextView
             android:layout_width="wrap_content"
@@ -94,4 +104,7 @@
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
+    </ScrollView>
 </FrameLayout>
