--- a/app/src/main/res/drawable/invite_student_icon.xml
+++ b/app/src/main/res/drawable/invite_student_icon.xml
@@ -4,32 +4,36 @@
     android:viewportWidth="47"
     android:viewportHeight="47">
     <path
-        android:fillColor="#FFF0F5EF"
+        android:fillColor="#FF4069FF"
         android:pathData="M0 12c0-6.63 5.37-12 12-12h23c6.63 0 12 5.37 12 12v23c0 6.63-5.37 12-12 12h-23c-6.63 0-12-5.37-12-12z"/>
-    <group>
-        <path
-            android:strokeColor="#FF379C2F"
-            android:strokeWidth="2"
-            android:strokeLineCap="round"
-            android:strokeLineJoin="round"
-            android:pathData="M28.5 32.5v-2c0-1.06-0.42-2.08-1.17-2.83s-1.77-1.17-2.83-1.17h-8c-1.06 0-2.08 0.42-2.83 1.17s-1.17 1.77-1.17 2.83v2"/>
-        <path
-            android:strokeColor="#FF379C2F"
-            android:strokeWidth="2"
-            android:strokeLineCap="round"
-            android:strokeLineJoin="round"
-            android:pathData="M20.5 22.5c2.2 0 4-1.8 4-4s-1.8-4-4-4-4 1.8-4 4 1.8 4 4 4Z"/>
-        <path
-            android:strokeColor="#FF379C2F"
-            android:strokeWidth="2"
-            android:strokeLineCap="round"
-            android:strokeLineJoin="round"
-            android:pathData="M34.5 32.5v-2c0-0.89-0.3-1.75-0.84-2.45-0.54-0.7-1.3-1.2-2.16-1.42"/>
-        <path
-            android:strokeColor="#FF379C2F"
-            android:strokeWidth="2"
-            android:strokeLineCap="round"
-            android:strokeLineJoin="round"
-            android:pathData="M27.5 14.63c0.86 0.22 1.62 0.72 2.17 1.42 0.54 0.7 0.84 1.57 0.84 2.45 0 0.9-0.3 1.76-0.84 2.46-0.55 0.7-1.31 1.2-2.17 1.42"/>
-    </group>
+    <path
+        android:strokeColor="#FFFFFFFF"
+        android:strokeWidth="2"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round"
+        android:pathData="M25.5 13.5h-8c-0.53 0-1.04 0.21-1.41 0.59-0.38 0.37-0.59 0.88-0.59 1.41v16c0 0.53 0.21 1.04 0.59 1.41 0.37 0.38 0.88 0.59 1.41 0.59h12c0.53 0 1.04-0.21 1.41-0.59 0.38-0.37 0.59-0.88 0.59-1.41v-12l-6-6Z"/>
+    <path
+        android:strokeColor="#FFFFFFFF"
+        android:strokeWidth="2"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round"
+        android:pathData="M25.5 13.5v6h6"/>
+    <path
+        android:strokeColor="#FFFFFFFF"
+        android:strokeWidth="2"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round"
+        android:pathData="M27.5 24.5h-8"/>
+    <path
+        android:strokeColor="#FFFFFFFF"
+        android:strokeWidth="2"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round"
+        android:pathData="M27.5 28.5h-8"/>
+    <path
+        android:strokeColor="#FFFFFFFF"
+        android:strokeWidth="2"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round"
+        android:pathData="M21.5 20.5h-1-1"/>
 </vector>
