--- a/app/src/main/res/layout/fragment_teachers.xml
+++ b/app/src/main/res/layout/fragment_teachers.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#f2f2f2"
+    android:background="@drawable/coloured_bg"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".screens.teachers.TeachersFragment">
@@ -42,10 +42,10 @@
             android:id="@+id/toolbar2"
             android:layout_width="0dp"
             android:layout_height="60dp"
-            android:background="?attr/colorPrimary"
+            android:navigationIcon="@drawable/hamburger_icon"
             android:elevation="16dp"
-            android:outlineSpotShadowColor="#907B8B97"
             android:theme="?attr/actionBarTheme"
+            android:layout_marginTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -54,17 +54,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <TextView
-                    android:id="@+id/app_namelabel"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/googlesans_medium"
-                    android:text="Grovico"
-                    android:textColor="@color/darkMainColor"
-                    android:textSize="24sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
                     android:id="@+id/user_logo"
@@ -118,7 +107,7 @@
                         android:layout_weight="5"
                         android:background="@drawable/filled_round_btn"
                         android:drawableLeft="@drawable/create_meeting_icon"
-                        android:fontFamily="@font/roboto_medium"
+                        android:fontFamily="@font/googlesans_medium"
                         android:paddingStart="12dp"
                         android:text="Create Meeting"
                         android:textColor="@color/white"
@@ -133,7 +122,7 @@
                         android:background="@drawable/filled_round_btn"
                         android:backgroundTint="#f2f2f4"
                         android:drawableLeft="@drawable/join_meeting_icon"
-                        android:fontFamily="@font/roboto_medium"
+                        android:fontFamily="@font/googlesans_medium"
                         android:paddingStart="12dp"
                         android:text="Join Meeting"
                         android:textAllCaps="false"
@@ -147,7 +136,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="20dp"
-                    android:fontFamily="@font/roboto_medium"
+                    android:fontFamily="@font/googlesans_medium"
                     android:text="Create or Join Instant Meetings"
                     android:textColor="#6d6d6d"
                     android:textSize="14sp"
@@ -165,8 +154,8 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:fontFamily="@font/roboto"
+            android:layout_marginTop="40dp"
+            android:fontFamily="@font/googlesans_medium"
             android:text="Your classes"
             android:textColor="@color/darkMainColor"
             android:textSize="24sp"
@@ -211,7 +200,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:fontFamily="@font/roboto_medium"
+                android:fontFamily="@font/googlesans_medium"
                 android:text="Create and Invite"
                 android:textColor="@color/darkMainColor"
                 android:textSize="24sp"
