--- a/app/src/main/res/drawable/notes_vector.xml
+++ b/app/src/main/res/drawable/notes_vector.xml
@@ -1,5 +1,18 @@
-<vector android:height="24dp" android:tint="#0E0D0D"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M19,3H4.99C3.89,3 3,3.9 3,5l0.01,14c0,1.1 0.89,2 1.99,2h10l6,-6V5C21,3.9 20.1,3 19,3zM7,8h10v2H7V8zM12,14H7v-2h5V14zM14,19.5V14h5.5L14,19.5z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="25dp"
+    android:height="25dp"
+    android:viewportWidth="25"
+    android:viewportHeight="25">
+    <path
+        android:strokeColor="#FF000000"
+        android:strokeWidth="2"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round"
+        android:pathData="M2.73 3.83h6c1.06 0 2.08 0.42 2.83 1.17s1.17 1.77 1.17 2.83v14c0-0.8-0.32-1.56-0.88-2.12s-1.33-0.88-2.12-0.88h-7v-15Z"/>
+    <path
+        android:strokeColor="#FF000000"
+        android:strokeWidth="2"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round"
+        android:pathData="M22.73 3.83h-6c-1.06 0-2.08 0.42-2.83 1.17s-1.17 1.77-1.17 2.83v14c0-0.8 0.31-1.56 0.88-2.12 0.56-0.56 1.32-0.88 2.12-0.88h7v-15Z"/>
 </vector>
