--- a/app/src/main/res/layout/reciver_bubble.xml
+++ b/app/src/main/res/layout/reciver_bubble.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_alignParentRight="true"
@@ -11,7 +10,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
-        android:layout_height="36dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:background="@drawable/sender_bub_bg"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -20,10 +19,13 @@
 
         <TextView
             android:id="@+id/reciver_message"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="10dp"
+            android:gravity="left"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="10dp"
             android:fontFamily="@font/googlesans_light"
             android:text="TextView"
             android:textColor="@color/darkMainColor"
